@@ -1,0 +1,104 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<!--
+
+`xsltproc -''-nonet \
+          -''-param man.charmap.use.subset "0" \
+          -''-param make.year.ranges "1" \
+          -''-param make.single.year.ranges "1" \
+          /usr/share/xml/docbook/stylesheet/nwalsh/manpages/docbook.xsl \
+          manpage.xml'
+
+A manual page <package>.<section> will be generated. You may view the
+manual page with: nroff -man <package>.<section> | less'. A typical entry
+in a Makefile or Makefile.am is:
+
+DB2MAN = /usr/share/sgml/docbook/stylesheet/xsl/nwalsh/manpages/docbook.xsl
+XP     = xsltproc -''-nonet -''-param man.charmap.use.subset "0"
+
+manpage.1: manpage.xml
+        $(XP) $(DB2MAN) $<
+
+The xsltproc binary is found in the xsltproc package. The XSL files are in
+docbook-xsl. A description of the parameters you can use can be found in the
+docbook-xsl-doc-* packages. Please remember that if you create the nroff
+version in one of the debian/rules file targets (such as build), you will need
+to include xsltproc and docbook-xsl in your Build-Depends control field.
+Alternatively use the xmlto command/package. That will also automatically
+pull in xsltproc and docbook-xsl.
+
+Notes for using docbook2x: docbook2x-man does not automatically create the
+AUTHOR(S) and COPYRIGHT sections. In this case, please add them manually as
+<refsect1> ... </refsect1>.
+
+To disable the automatic creation of the AUTHOR(S) and COPYRIGHT sections
+read /usr/share/doc/docbook-xsl/doc/manpages/authors.html. This file can be
+found in the docbook-xsl-doc-html package.
+
+Validation can be done using: `xmllint -''-noout -''-valid manpage.xml`
+
+General documentation about man-pages and man-page-formatting:
+man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
+
+-->
+<!DOCTYPE refentry [
+
+  <!ENTITY dhsection   "1">
+  <!ENTITY dhpackage "mpd-sima">
+  <!ENTITY dhutils "test-tags-config">
+
+]>
+
+<refentry xmlns="http://docbook.org/ns/docbook"
+          xmlns:xi="http://www.w3.org/2001/XInclude" version="5.0">
+  <xi:include href="info.xml" />
+  <refmeta>
+      <refentrytitle>&dhutils;</refentrytitle>
+      <manvolnum>&dhsection;</manvolnum>
+  </refmeta>
+  <refnamediv>
+    <refname>&dhutils;</refname>
+    <refpurpose>controls tags plugin configuration.</refpurpose>
+  </refnamediv>
+  <refsynopsisdiv>
+    <cmdsynopsis>
+      <command>&dhutils;</command>
+      <arg choice="req"><option>config_file</option></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+  <refsect1 id="description">
+    <title>DESCRIPTION</title>
+    <para>This manual page documents briefly the
+      <command>&dhutils;</command> commands.</para>
+    <para>
+      <command>&dhutils;</command>
+      will load <varname>config_file</varname> passed as argument and look for tags plugin configuration to query MPD with it. There is no attempt to auto-discover configuration file, positional argument is required.<sbr />
+      See also environment variables special case for MPD host and port in <xref linkend="environment"/>.
+    </para>
+  </refsect1>
+  <xi:include href="files.xml" />
+  <refsect1 id="environment">
+      <title>ENVIRONMENT</title>
+      <variablelist>
+          <varlistentry>
+              <term><envar>MPD_HOST</envar>, <envar>MPD_PORT</envar></term>
+              <listitem>
+                  <para>&dhutils; will look for <envar>MPD_HOST</envar> and
+                      <envar>MPD_PORT</envar> to override built-in configuration
+                      (set to "localhost:6600").</para>
+                  <para>&dhutils; expects <envar>MPD_HOST</envar> syntax as documented in mpc manual, 
+                      cf. <citerefentry><refentrytitle>mpc</refentrytitle><manvolnum>1</manvolnum></citerefentry>.
+                      <sbr/>To use a password, provide a value of the form "password@host".
+                  </para>
+              </listitem>
+          </varlistentry>
+          <varlistentry>
+              <term><envar>HTTP_PROXY</envar>, <envar>HTTPS_PROXY</envar></term>
+              <listitem>
+                  <para>&dhutils; honors <envar>HTTP_PROXY</envar> environment variables.</para>
+              </listitem>
+          </varlistentry>
+      </variablelist>
+  </refsect1>
+  <xi:include href="feedback.xml" />
+  <xi:include href="seealso.xml" />
+</refentry>
